--- a/package.json
+++ b/package.json
@@ -6,38 +6,51 @@
   "main": "./src/index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production rimraf dist && webpack --mode production",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development --open --watch",
-    "deploy": "cross-env NODE_ENV=production gh-pages -d dist"
+    "dev": "cross-env NODE_ENV=development webpack serve --mode development --open",
+    "deploy": "cross-env NODE_ENV=production gh-pages -d dist",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix",
+    "format": "prettier --write \"src/**/*.{js,css,html}\"",
+    "format:check": "prettier --check \"src/**/*.{js,css,html}\"",
+    "validate": "npm run lint && npm run format:check"
   },
   "keywords": [],
   "author": "1ebobski",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "~7.6.4",
-    "@babel/core": "~7.6.4",
-    "@babel/plugin-proposal-class-properties": "~7.5.5",
-    "@babel/preset-env": "~7.6.3",
-    "autoprefixer": "~9.7.0",
-    "babel-loader": "~8.0.6",
-    "cross-env": "~7.0.0",
-    "css-loader": "~3.2.0",
-    "cssnano": "~4.1.10",
-    "file-loader": "~4.2.0",
-    "gh-pages": "~2.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "~6.0.0",
-    "mini-css-extract-plugin": "~0.8.0",
-    "optimize-css-assets-webpack-plugin": "~5.0.3",
-    "postcss-loader": "~3.0.0",
-    "style-loader": "~1.0.0",
-    "webpack": "~4.41.2",
-    "webpack-cli": "~3.3.9",
-    "webpack-dev-server": "~3.9.0",
-    "webpack-md5-hash": "~0.0.6"
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-transform-class-properties": "^7.23.3",
+    "@babel/preset-env": "^7.23.9",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
+    "autoprefixer": "^10.4.17",
+    "babel-loader": "^9.1.3",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.10.0",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "cssnano": "^6.0.3",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsdoc": "^50.6.3",
+    "eslint-plugin-prettier": "^5.2.3",
+    "file-loader": "^6.2.0",
+    "gh-pages": "^6.1.1",
+    "html-webpack-plugin": "^5.6.0",
+    "image-webpack-loader": "^8.1.0",
+    "mini-css-extract-plugin": "^2.8.0",
+    "postcss": "^8.4.35",
+    "postcss-loader": "^8.1.1",
+    "prettier": "^3.5.3",
+    "rimraf": "^5.0.5",
+    "style-loader": "^3.3.4",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "babel-polyfill": "~6.26.0",
-    "core-js": "~3.1.4",
-    "flickity": "~2.2.1"
+    "core-js": "^3.36.0",
+    "flickity": "^3.0.0"
   }
 }
