--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "build": "cross-env NODE_ENV=production rimraf dist && webpack --mode production",
-    "dev": "cross-env NODE_ENV=development webpack serve --mode development --open",
+    "start": "cross-env NODE_ENV=development webpack serve --mode development --open",
     "deploy": "cross-env NODE_ENV=production gh-pages -d dist",
     "lint": "eslint . --ext .js,.ts",
     "lint:fix": "eslint . --ext .js,.ts --fix",
